--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "nodemon app.js",
     "dev": "nodemon ./src/index.ts",
-    "formatter": "yarn prettier --write ./src"
+    "formatter": "yarn prettier --write ./src",
+    "lint": "yarn run eslint ./src"
   },
   "dependencies": {
     "ajv": "^8.6.3",
@@ -27,8 +28,13 @@
     "readjson": "^2.2.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15",
