--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node dist/app.js",
+    "build": "tsc",
     "dev": "nodemon ./src/index.ts",
     "formatter": "yarn prettier --write ./src",
     "lint": "yarn run eslint ./src"
   },
   "dependencies": {
+    "@types/typescript": "^2.0.0",
     "ajv": "^8.6.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
@@ -17,15 +19,12 @@
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
-    "load-json-file": "^7.0.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.13",
-    "randomstring": "^1.2.1",
-    "readjson": "^2.2.2"
+    "randomstring": "^1.2.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
