--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "tsc": "^2.0.3"
   }
 }
