--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "express-async-errors": "^3.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.95.11",
+    "knex": "^0.95.14",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.13",
     "randomstring": "^1.2.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/randomstring": "^1.1.8",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
