--- a/package.json
+++ b/package.json
@@ -10,26 +10,24 @@
     "lint": "yarn run eslint ./src"
   },
   "dependencies": {
-    "@types/typescript": "^2.0.0",
     "ajv": "^8.6.3",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
-    "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
-    "nodemon": "^2.0.13",
     "randomstring": "^1.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/knex": "^0.16.1",
@@ -42,6 +40,7 @@
     "eslint-config-prettier": "^8.3.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
-    "tsc": "^2.0.3"
+    "tsc": "^2.0.3",
+    "typescript": "^4.5.4"
   }
 }
