--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "eiows": "^3.7.3",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "global": "^4.4.0",
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
@@ -42,5 +44,9 @@
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "tsc": "^2.0.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.5",
+    "utf-8-validate": "^5.0.7"
   }
 }
