--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
+    "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
-    "randomstring": "^1.2.1"
+    "randomstring": "^1.2.1",
+    "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
