--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ajv": "^8.6.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.27.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
