--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "knex": "^0.95.14",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.2",
     "randomstring": "^1.2.1",
     "ts-node": "^10.4.0"
   },
@@ -35,6 +36,7 @@
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
     "@types/randomstring": "^1.1.8",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
