--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.2",
     "randomstring": "^1.2.1",
     "socket.io": "^4.4.0"
