--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.2",
+    "nodemailer": "^6.7.2",
+    "otplib": "^12.0.1",
     "randomstring": "^1.2.1",
     "socket.io": "^4.4.0"
   },
@@ -37,6 +39,7 @@
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
